fixed bottom aligned chat input

--- a/public/bootstrap/less/trp3Chat.less
+++ b/public/bootstrap/less/trp3Chat.less
@@ -6,7 +6,8 @@
 	position: fixed;
 	bottom: 0px;
 	display: inline-block;
-	margin-bottom: 40px;
+	padding: 10px 0px;
+	background-color: @trpBgColor;
 }
 
 .trpChatInputBox {
